# VoxelEngine

./: CMakeLists.txt  run.sh
src/: glad.c  main.cpp
src/engine/: Engine.cpp  Engine.hpp  Mainloop.cpp  Mainloop.hpp  Window.cpp  Window.hpp
src/files/: File.cpp  File.hpp
src/graphics/shapes/: TriangleShape.cpp  TriangleShape.hpp
src/shaders/: Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp
